[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk02.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk01.png" type="Texture" id=3]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk05.png" type="Texture" id=4]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk11.png" type="Texture" id=5]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk08.png" type="Texture" id=6]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk09.png" type="Texture" id=7]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk07.png" type="Texture" id=8]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk04.png" type="Texture" id=9]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk06.png" type="Texture" id=10]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk03.png" type="Texture" id=11]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_walk/PNG/p1_walk10.png" type="Texture" id=12]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_jump.png" type="Texture" id=13]
[ext_resource path="res://Assests/platformerGraphicsDeluxe_Updated/Player/p1_stand.png" type="Texture" id=14]
[ext_resource path="res://audio/jump.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/coin.wav" type="AudioStream" id=16]
[ext_resource path="res://audio/game_over.wav" type="AudioStream" id=17]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
jump_height = 250.0
jump_time_to_peak = 0.8
jump_time_to_descent = 0.6

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "jump"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -60
limit_bottom = 700

[node name="jump_buffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="coin_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
